# larql

./: AGENTS.md  Cargo.toml  Makefile  ROADMAP.md  ROADMAP_STATUS.md
.github/workflows/: larql-compute.yml
bench/aim-validation/: ave_demo_gemma3-4b.json
crates/larql-cli/: ROADMAP.md
crates/larql-compute/: Cargo.toml  coverage-policy.json
crates/larql-compute-metal/: Cargo.toml  coverage-policy.json
crates/larql-compute-metal/examples/: compare_decode.rs  compare_formats.rs  compare_ollama.rs  compare_pipeline.rs  diag_decode_pipeline.rs
crates/larql-compute-metal/src/: async_compute_backend_impl.rs  decode_hybrid.rs  kv_dispatch_impl.rs  lib.rs  pipeline.rs
crates/larql-compute-metal/tests/: test_kernel_fused_ops_norms.rs  test_kernel_moe_expert_dispatch.rs  test_kernel_new_fused_kernels.rs  test_kernel_vindex_integration.rs  test_metal_decode_synthetic.rs  test_metal_shaders.rs  test_pipeline_and_moe.rs
crates/larql-compute/src/: ffn.rs  kv_index.rs  lib.rs  per_layer_decode_state.rs  pipeline_layer.rs  test_fixtures.rs
crates/larql-compute/src/attention/: decode.rs
crates/larql-compute/src/backend/: decode.rs  mod.rs
crates/larql-compute/src/cpu/ops/: q4_common.rs  q4k_q8k_dot.rs
crates/larql-compute/src/forward/: layer.rs
crates/larql-compute/src/kquant_forward/: cached.rs  mod.rs
crates/larql-compute/src/kv_dispatch/: cpu.rs  mod.rs
crates/larql-compute/tests/: test_backend_matmul_quant.rs
crates/larql-inference/: Cargo.toml  ROADMAP.md  coverage-policy.json
crates/larql-inference/examples/: ave_demo.rs  cpu_gpu_diag.rs  decode_vs_prefill.rs  moe_grid_generate.rs  predict_from_residual.rs  probe_contribution_distribution.rs  probe_residual_stream.rs  (+2 more)
crates/larql-kv/: Cargo.toml  PERFORMANCE.md  README.md  ROADMAP.md
crates/larql-lql/: Cargo.toml
crates/larql-router/: README.md  ROADMAP.md
crates/larql-server/: Cargo.toml
crates/larql-vindex/: Cargo.toml
docs/adr/: 0014-hot-shard-load-rate-replication.md
(+133 files in other folders)
