[package]
name = "larql-compute"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Compute backend trait + CPU implementation for LARQL. GPU backends ship as sibling crates (larql-compute-metal, future larql-compute-vulkan / larql-compute-cuda)."
keywords = ["matmul", "cpu", "blas", "quantization", "trait"]
categories = ["science"]

[dependencies]
# Matrix types
ndarray = { version = "0.16", features = ["blas"] }
# MoE expert parallelism: top-k experts run independently per token.
rayon = "1.10"
# Wire-format constants (Q4_K_BLOCK_ELEMS, etc.) for padding decisions.
# Tests/benches depend on it too — keep both lists in sync.
larql-models = { path = "../larql-models" }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
blas-src = { version = "0.10", features = ["openblas"], default-features = false }
openblas-src = { version = "0.10", features = ["system"] }

[target.'cfg(target_os = "macos")'.dependencies]
blas-src = { version = "0.10", features = ["accelerate"] }

[target.'cfg(target_os = "windows")'.dependencies]
blas-src = { version = "0.10", features = ["openblas"], default-features = false }
openblas-src = { version = "0.10", features = ["system"] }


[features]
default = []
# Opt-in gate for the slow integration suites. Plain
# `cargo test -p larql-compute` skips them so the dev loop stays under
# ~10 s; CI / release runs flip this on to get coverage.
heavy_tests = []

[build-dependencies]
cc = "1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = "0.5"
serde_json = "1"
memmap2 = "0.9"

[[bench]]
name = "linalg"
harness = false

# No external `cfg(cargo-clippy)` macros reach this crate after the
# `metal-rs` / `objc` deps moved to larql-compute-metal, so no
# crate-wide cfg-allowlist is needed.
